--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
 		font-variant: small-caps;
 	}
 	button {
-		@apply rounded bg-slate-500 hover:bg-blue-700 pt-0 pb-1 px-2 text-white;
+		@apply rounded bg-slate-600 hover:bg-slate-500 pt-0 pb-1 px-2 text-white;
 	}
 	
 }
