--- a/src/index.scss
+++ b/src/index.scss
@@ -29,7 +29,12 @@ a.active {
 		}
 		margin-bottom: 1rem;
 		background-color: rgb(243, 243, 205);
-		padding: .5rem;
-		border-radius: .5rem;
+		padding: 0.5rem;
+		border-radius: 0.5rem;
 	}
+}
+
+button:focus {
+	outline: none; /* Remove default outline */
+	box-shadow: none; /* Remove any box-shadow if applied */
 }
